add docs swager
